--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 django = "^5.1.3"
 djangorestframework = "^3.15.2"
 django-jazzmin = "^3.0.1"
+django-filter = "^24.3"
 
 
 [build-system]
